[metadata]
name             = pydicti
version          = 0.0.6
description      = Case insensitive derivable dictionary
long_description = file: README.rst, CHANGES.rst
author           = Thomas Gläßle
author_email     = t_glaessle@gmx.de
url              = https://github.com/coldfix/pydicti
license          = WTFPL
classifiers      =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
py_modules = pydicti
test_suite = nose.collector
zip_safe = True
include_package_data = True
python_requires = >=2.6
install_requires =
    ordereddict; python_version == "2.6"
tests_require =
    nose

[nosetests]
with-doctest = 1
